@@ -1,0 +1,2 @@
+reg <- parseRegion("TCGA-23-1027:Chr2@108-140,cp=124+/-0.5,s=0/1")
+str(reg)
