@@ -2,9 +2,11 @@ Package: aroma.cn.eval
 ======================
 
 Version: 0.5.0 [2013-12-12]
-o Added methods for setting up, parsing and extract CN regions - 
+o Added methods for setting up, parsing and extract CN regions -
   methods that were previously only part of the RSP reports code.
 o DOCUMENTATION: Added vignette 'ROC assessment of detecting a change point'
+o DOCUMENTATION: Added help for findRocSmoothingForTpAtFp(),
+  scanRocTpAtFp() and parseRegion().
 
 
 Version: 0.4.1 [2013-12-09]
@@ -12,7 +14,7 @@ o Updated package dependencies.  Lowered the required version of ROC
   just to get it to build on R-Forge.
 o CLEANUP: Shortened too long (> 100 characters) pathnames of some files.
 
- 
+
 Version: 0.4.0 [2013-10-28]
 o Updated package dependencies.
 o Package requires R (>= 2.15.0) [and Bioc (>= 2.10.0)].
